tests/lean/find.lean
Find ".*ongr.*"
Find "foo"
Find "(ab"